# fairness_pipeline_dev_toolkit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANEGELOG.md  README.md  artifacts_demo_report.json  artifacts_demo_report.md  config.yml  demo.ipynb  demo_pipe.ipynb  dev_sample.csv  dev_sample_csv.py  dev_sample_train.csv  dev_sample_train.py  fairness_report.md  pipeline.config.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  fairness_check.yml
artifacts/: calib_input.csv  calibrated_scores_isotonic.csv  calibrated_scores_platt.csv  detectors.json  lagrangian_history.json  lagrangian_history_eo.json  pareto_points.json  pipeline_bias_report.json  pipeline_phase0_report.json  pipeline_run.md  report.md  report_with_ci.md  sample.transformed.csv
benchmarks/: benchmark_metrics_100k.py
docs/: ADR-001-architecture.md
fairness_pipeline_dev_toolkit/: __init__.py
fairness_pipeline_dev_toolkit/cli/: main.py
fairness_pipeline_dev_toolkit/integration/: mlflow_logger.py  pytest_plugin.py  reporting.py
fairness_pipeline_dev_toolkit/measurement/: __init__.py
fairness_pipeline_dev_toolkit/metrics/: __init__.py  aequitas_adapter.py  base.py  core.py  fairlearn_adapter.py  native_adapter.py  registry.json
fairness_pipeline_dev_toolkit/pipeline/: __init__.py  pipeline.config.yml
fairness_pipeline_dev_toolkit/stats/: bayesian.py  bootstrap.py  effect_size.py  (+1 more)
scripts/: quick_fairness_check.py
tests/: conftest.py  test_adapter_selection.py  test_metrics_edge_cases.py  test_placeholder.py  test_result_schema.py  test_stats.py
(+39 files in other folders)
