[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairness_toolkit"
version = "0.1.0"
description = "Measurement Module for the Fairness Pipeline Development Toolkit"
authors = [{ name = "Svrus LLC" }]
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"