[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairness_pipeline_dev_toolkit"
version = "0.2.0"
description = "Measurement Module for the Fairness Pipeline Development Toolkit"
authors = [{ name = "Svrus LLC" }]
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "black>=24.3",
  "flake8>=7.0",
  "isort>=5.13",
  "pre-commit>=3.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fairness_pipeline_dev_toolkit*"]   # <-- IMPORTANT
exclude = ["tests*", "benchmarks*"]

[project.scripts]
fairpipe = "fairness_pipeline_dev_toolkit.cli.main:main"

[tool.ruff]
extend-exclude = ["*.ipynb"]
